// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`User Management Queries when fetching schemas (/admin) should return the expected result 1`] = `
[
  {
    "description": "A tag is used to group related resources or notes in a non-hierarchical manner",
    "label": "Tag",
    "link": "/tags",
    "pluralLabel": "Tags",
    "schema": {
      "id": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "unique identifier",
        "isArray": false,
        "isOptional": false,
        "label": "ID",
      },
      "label": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "a human readable text label for this tag",
        "isArray": false,
        "isOptional": false,
        "label": "label",
      },
      "members": {
        "coscradDataType": "COMPOSITE_IDENTIFIER",
        "description": "the composite identifier of every resource or note with this tag",
        "isArray": true,
        "isOptional": false,
        "label": "members",
      },
      "name": {
        "complexDataType": "NESTED_TYPE",
        "description": "multilingual text name of the entity",
        "isArray": false,
        "isOptional": false,
        "label": "name",
        "schema": {
          "items": {
            "complexDataType": "NESTED_TYPE",
            "description": "one item for each provided language",
            "isArray": true,
            "isOptional": false,
            "label": "items",
            "schema": {
              "languageCode": {
                "complexDataType": "ENUM",
                "description": "an official identifier of the language",
                "enumLabel": "Language_Code",
                "enumName": "LangaugeCode",
                "isArray": false,
                "isOptional": false,
                "label": "language code",
                "labelsAndValues": [
                  {
                    "label": "Chilcotin",
                    "value": "clc",
                  },
                  {
                    "label": "Haida",
                    "value": "hai",
                  },
                  {
                    "label": "English",
                    "value": "eng",
                  },
                  {
                    "label": "French",
                    "value": "fra",
                  },
                  {
                    "label": "Chinook",
                    "value": "chn",
                  },
                  {
                    "label": "Zapotec",
                    "value": "zap",
                  },
                  {
                    "label": "Spanish",
                    "value": "spa",
                  },
                ],
              },
              "role": {
                "complexDataType": "ENUM",
                "description": "role of this text in the translation process",
                "enumLabel": "text item role",
                "enumName": "Multilingual Text Item Role",
                "isArray": false,
                "isOptional": false,
                "label": "text item role",
                "labelsAndValues": [
                  {
                    "label": "original",
                    "value": "original",
                  },
                  {
                    "label": "glossed to",
                    "value": "glossed to",
                  },
                  {
                    "label": "prompt",
                    "value": "prompt",
                  },
                  {
                    "label": "free translation",
                    "value": "free translation",
                  },
                  {
                    "label": "literal translation",
                    "value": "literal translation",
                  },
                ],
              },
              "text": {
                "coscradDataType": "NON_EMPTY_STRING",
                "description": "plain text in the given language",
                "isArray": false,
                "isOptional": false,
                "label": "text",
              },
            },
          },
        },
      },
    },
    "type": "tag",
  },
  {
    "description": "A category tree provides a hierarchical organization of resources",
    "label": "Category",
    "link": "/treeOfKnowledge",
    "pluralLabel": "Categories",
    "schema": {
      "children": {
        "complexDataType": "NESTED_TYPE",
        "description": "self similar reference to all categories that are direct-descendants of this category in the tree",
        "isArray": false,
        "isOptional": false,
        "label": "children",
        "schema": {
          "id": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "unique identifier",
            "isArray": false,
            "isOptional": false,
            "label": "ID",
          },
          "label": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "the user-facing label for this category",
            "isArray": false,
            "isOptional": false,
            "label": "label",
          },
          "members": {
            "coscradDataType": "COMPOSITE_IDENTIFIER",
            "description": "the composite identifier of every resource or note in this category",
            "isArray": true,
            "isOptional": false,
            "label": "members",
          },
          "name": {
            "complexDataType": "NESTED_TYPE",
            "description": "multilingual text name of the entity",
            "isArray": false,
            "isOptional": false,
            "label": "name",
            "schema": {
              "items": {
                "complexDataType": "NESTED_TYPE",
                "description": "one item for each provided language",
                "isArray": true,
                "isOptional": false,
                "label": "items",
                "schema": {
                  "languageCode": {
                    "complexDataType": "ENUM",
                    "description": "an official identifier of the language",
                    "enumLabel": "Language_Code",
                    "enumName": "LangaugeCode",
                    "isArray": false,
                    "isOptional": false,
                    "label": "language code",
                    "labelsAndValues": [
                      {
                        "label": "Chilcotin",
                        "value": "clc",
                      },
                      {
                        "label": "Haida",
                        "value": "hai",
                      },
                      {
                        "label": "English",
                        "value": "eng",
                      },
                      {
                        "label": "French",
                        "value": "fra",
                      },
                      {
                        "label": "Chinook",
                        "value": "chn",
                      },
                      {
                        "label": "Zapotec",
                        "value": "zap",
                      },
                      {
                        "label": "Spanish",
                        "value": "spa",
                      },
                    ],
                  },
                  "role": {
                    "complexDataType": "ENUM",
                    "description": "role of this text in the translation process",
                    "enumLabel": "text item role",
                    "enumName": "Multilingual Text Item Role",
                    "isArray": false,
                    "isOptional": false,
                    "label": "text item role",
                    "labelsAndValues": [
                      {
                        "label": "original",
                        "value": "original",
                      },
                      {
                        "label": "glossed to",
                        "value": "glossed to",
                      },
                      {
                        "label": "prompt",
                        "value": "prompt",
                      },
                      {
                        "label": "free translation",
                        "value": "free translation",
                      },
                      {
                        "label": "literal translation",
                        "value": "literal translation",
                      },
                    ],
                  },
                  "text": {
                    "coscradDataType": "NON_EMPTY_STRING",
                    "description": "plain text in the given language",
                    "isArray": false,
                    "isOptional": false,
                    "label": "text",
                  },
                },
              },
            },
          },
        },
      },
      "id": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "unique identifier",
        "isArray": false,
        "isOptional": false,
        "label": "ID",
      },
      "label": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "the user-facing label for this category",
        "isArray": false,
        "isOptional": false,
        "label": "label",
      },
      "members": {
        "coscradDataType": "COMPOSITE_IDENTIFIER",
        "description": "the composite identifier of every resource or note in this category",
        "isArray": true,
        "isOptional": false,
        "label": "members",
      },
      "name": {
        "complexDataType": "NESTED_TYPE",
        "description": "multilingual text name of the entity",
        "isArray": false,
        "isOptional": false,
        "label": "name",
        "schema": {
          "items": {
            "complexDataType": "NESTED_TYPE",
            "description": "one item for each provided language",
            "isArray": true,
            "isOptional": false,
            "label": "items",
            "schema": {
              "languageCode": {
                "complexDataType": "ENUM",
                "description": "an official identifier of the language",
                "enumLabel": "Language_Code",
                "enumName": "LangaugeCode",
                "isArray": false,
                "isOptional": false,
                "label": "language code",
                "labelsAndValues": [
                  {
                    "label": "Chilcotin",
                    "value": "clc",
                  },
                  {
                    "label": "Haida",
                    "value": "hai",
                  },
                  {
                    "label": "English",
                    "value": "eng",
                  },
                  {
                    "label": "French",
                    "value": "fra",
                  },
                  {
                    "label": "Chinook",
                    "value": "chn",
                  },
                  {
                    "label": "Zapotec",
                    "value": "zap",
                  },
                  {
                    "label": "Spanish",
                    "value": "spa",
                  },
                ],
              },
              "role": {
                "complexDataType": "ENUM",
                "description": "role of this text in the translation process",
                "enumLabel": "text item role",
                "enumName": "Multilingual Text Item Role",
                "isArray": false,
                "isOptional": false,
                "label": "text item role",
                "labelsAndValues": [
                  {
                    "label": "original",
                    "value": "original",
                  },
                  {
                    "label": "glossed to",
                    "value": "glossed to",
                  },
                  {
                    "label": "prompt",
                    "value": "prompt",
                  },
                  {
                    "label": "free translation",
                    "value": "free translation",
                  },
                  {
                    "label": "literal translation",
                    "value": "literal translation",
                  },
                ],
              },
              "text": {
                "coscradDataType": "NON_EMPTY_STRING",
                "description": "plain text in the given language",
                "isArray": false,
                "isOptional": false,
                "label": "text",
              },
            },
          },
        },
      },
    },
    "type": "category",
  },
  {
    "description": "A user may belong to groups and have privileges to access data",
    "label": "User",
    "link": "/admin/users",
    "pluralLabel": "Users",
    "schema": {
      "id": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "unique identifier",
        "isArray": false,
        "isOptional": false,
        "label": "ID",
      },
      "name": {
        "complexDataType": "NESTED_TYPE",
        "description": "multilingual text name of the entity",
        "isArray": false,
        "isOptional": false,
        "label": "name",
        "schema": {
          "items": {
            "complexDataType": "NESTED_TYPE",
            "description": "one item for each provided language",
            "isArray": true,
            "isOptional": false,
            "label": "items",
            "schema": {
              "languageCode": {
                "complexDataType": "ENUM",
                "description": "an official identifier of the language",
                "enumLabel": "Language_Code",
                "enumName": "LangaugeCode",
                "isArray": false,
                "isOptional": false,
                "label": "language code",
                "labelsAndValues": [
                  {
                    "label": "Chilcotin",
                    "value": "clc",
                  },
                  {
                    "label": "Haida",
                    "value": "hai",
                  },
                  {
                    "label": "English",
                    "value": "eng",
                  },
                  {
                    "label": "French",
                    "value": "fra",
                  },
                  {
                    "label": "Chinook",
                    "value": "chn",
                  },
                  {
                    "label": "Zapotec",
                    "value": "zap",
                  },
                  {
                    "label": "Spanish",
                    "value": "spa",
                  },
                ],
              },
              "role": {
                "complexDataType": "ENUM",
                "description": "role of this text in the translation process",
                "enumLabel": "text item role",
                "enumName": "Multilingual Text Item Role",
                "isArray": false,
                "isOptional": false,
                "label": "text item role",
                "labelsAndValues": [
                  {
                    "label": "original",
                    "value": "original",
                  },
                  {
                    "label": "glossed to",
                    "value": "glossed to",
                  },
                  {
                    "label": "prompt",
                    "value": "prompt",
                  },
                  {
                    "label": "free translation",
                    "value": "free translation",
                  },
                  {
                    "label": "literal translation",
                    "value": "literal translation",
                  },
                ],
              },
              "text": {
                "coscradDataType": "NON_EMPTY_STRING",
                "description": "plain text in the given language",
                "isArray": false,
                "isOptional": false,
                "label": "text",
              },
            },
          },
        },
      },
      "profile": {
        "complexDataType": "NESTED_TYPE",
        "description": "the user's profile information",
        "isArray": false,
        "isOptional": true,
        "label": "profile",
        "schema": {
          "email": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "the user's email address",
            "isArray": false,
            "isOptional": false,
            "label": "email",
          },
          "name": {
            "complexDataType": "NESTED_TYPE",
            "description": "the user's full name",
            "isArray": false,
            "isOptional": false,
            "label": "full name",
            "schema": {
              "firstName": {
                "coscradDataType": "NON_EMPTY_STRING",
                "description": "the user's first name",
                "isArray": false,
                "isOptional": false,
                "label": "first name",
              },
              "lastName": {
                "coscradDataType": "NON_EMPTY_STRING",
                "description": "the user's last name",
                "isArray": false,
                "isOptional": false,
                "label": "last name",
              },
            },
          },
        },
      },
      "roles": {
        "complexDataType": "ENUM",
        "description": "the user's roles, which grant privileges to perform certain read \\ write actions",
        "enumLabel": "User Role",
        "enumName": "COSCRAD_USER_ROLE",
        "isArray": true,
        "isOptional": false,
        "label": "roles",
        "labelsAndValues": [
          {
            "label": "admin",
            "value": "projectAdmin",
          },
          {
            "label": "viewer",
            "value": "viewer",
          },
          {
            "label": "COSCRAD admin",
            "value": "superAdmin",
          },
        ],
      },
      "username": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "a human-readable identifier for this user",
        "isArray": false,
        "isOptional": false,
        "label": "username",
      },
    },
    "type": "user",
  },
  {
    "description": "A user group serves to organize users based on shared privileges to access data",
    "label": "User Group",
    "link": "/admin/userGroups",
    "pluralLabel": "User Groups",
    "schema": {
      "description": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "a summary of the significance of this user group (what its members have in common)",
        "isArray": false,
        "isOptional": false,
        "label": "description",
      },
      "id": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "unique identifier",
        "isArray": false,
        "isOptional": false,
        "label": "ID",
      },
      "label": {
        "coscradDataType": "NON_EMPTY_STRING",
        "description": "the name of the group",
        "isArray": false,
        "isOptional": false,
        "label": "label",
      },
      "name": {
        "complexDataType": "NESTED_TYPE",
        "description": "multilingual text name of the entity",
        "isArray": false,
        "isOptional": false,
        "label": "name",
        "schema": {
          "items": {
            "complexDataType": "NESTED_TYPE",
            "description": "one item for each provided language",
            "isArray": true,
            "isOptional": false,
            "label": "items",
            "schema": {
              "languageCode": {
                "complexDataType": "ENUM",
                "description": "an official identifier of the language",
                "enumLabel": "Language_Code",
                "enumName": "LangaugeCode",
                "isArray": false,
                "isOptional": false,
                "label": "language code",
                "labelsAndValues": [
                  {
                    "label": "Chilcotin",
                    "value": "clc",
                  },
                  {
                    "label": "Haida",
                    "value": "hai",
                  },
                  {
                    "label": "English",
                    "value": "eng",
                  },
                  {
                    "label": "French",
                    "value": "fra",
                  },
                  {
                    "label": "Chinook",
                    "value": "chn",
                  },
                  {
                    "label": "Zapotec",
                    "value": "zap",
                  },
                  {
                    "label": "Spanish",
                    "value": "spa",
                  },
                ],
              },
              "role": {
                "complexDataType": "ENUM",
                "description": "role of this text in the translation process",
                "enumLabel": "text item role",
                "enumName": "Multilingual Text Item Role",
                "isArray": false,
                "isOptional": false,
                "label": "text item role",
                "labelsAndValues": [
                  {
                    "label": "original",
                    "value": "original",
                  },
                  {
                    "label": "glossed to",
                    "value": "glossed to",
                  },
                  {
                    "label": "prompt",
                    "value": "prompt",
                  },
                  {
                    "label": "free translation",
                    "value": "free translation",
                  },
                  {
                    "label": "literal translation",
                    "value": "literal translation",
                  },
                ],
              },
              "text": {
                "coscradDataType": "NON_EMPTY_STRING",
                "description": "plain text in the given language",
                "isArray": false,
                "isOptional": false,
                "label": "text",
              },
            },
          },
        },
      },
      "users": {
        "complexDataType": "NESTED_TYPE",
        "description": "all users that are in this group",
        "isArray": true,
        "isOptional": false,
        "label": "users",
        "schema": {
          "id": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "unique identifier",
            "isArray": false,
            "isOptional": false,
            "label": "ID",
          },
          "name": {
            "complexDataType": "NESTED_TYPE",
            "description": "multilingual text name of the entity",
            "isArray": false,
            "isOptional": false,
            "label": "name",
            "schema": {
              "items": {
                "complexDataType": "NESTED_TYPE",
                "description": "one item for each provided language",
                "isArray": true,
                "isOptional": false,
                "label": "items",
                "schema": {
                  "languageCode": {
                    "complexDataType": "ENUM",
                    "description": "an official identifier of the language",
                    "enumLabel": "Language_Code",
                    "enumName": "LangaugeCode",
                    "isArray": false,
                    "isOptional": false,
                    "label": "language code",
                    "labelsAndValues": [
                      {
                        "label": "Chilcotin",
                        "value": "clc",
                      },
                      {
                        "label": "Haida",
                        "value": "hai",
                      },
                      {
                        "label": "English",
                        "value": "eng",
                      },
                      {
                        "label": "French",
                        "value": "fra",
                      },
                      {
                        "label": "Chinook",
                        "value": "chn",
                      },
                      {
                        "label": "Zapotec",
                        "value": "zap",
                      },
                      {
                        "label": "Spanish",
                        "value": "spa",
                      },
                    ],
                  },
                  "role": {
                    "complexDataType": "ENUM",
                    "description": "role of this text in the translation process",
                    "enumLabel": "text item role",
                    "enumName": "Multilingual Text Item Role",
                    "isArray": false,
                    "isOptional": false,
                    "label": "text item role",
                    "labelsAndValues": [
                      {
                        "label": "original",
                        "value": "original",
                      },
                      {
                        "label": "glossed to",
                        "value": "glossed to",
                      },
                      {
                        "label": "prompt",
                        "value": "prompt",
                      },
                      {
                        "label": "free translation",
                        "value": "free translation",
                      },
                      {
                        "label": "literal translation",
                        "value": "literal translation",
                      },
                    ],
                  },
                  "text": {
                    "coscradDataType": "NON_EMPTY_STRING",
                    "description": "plain text in the given language",
                    "isArray": false,
                    "isOptional": false,
                    "label": "text",
                  },
                },
              },
            },
          },
          "profile": {
            "complexDataType": "NESTED_TYPE",
            "description": "the user's profile information",
            "isArray": false,
            "isOptional": true,
            "label": "profile",
            "schema": {
              "email": {
                "coscradDataType": "NON_EMPTY_STRING",
                "description": "the user's email address",
                "isArray": false,
                "isOptional": false,
                "label": "email",
              },
              "name": {
                "complexDataType": "NESTED_TYPE",
                "description": "the user's full name",
                "isArray": false,
                "isOptional": false,
                "label": "full name",
                "schema": {
                  "firstName": {
                    "coscradDataType": "NON_EMPTY_STRING",
                    "description": "the user's first name",
                    "isArray": false,
                    "isOptional": false,
                    "label": "first name",
                  },
                  "lastName": {
                    "coscradDataType": "NON_EMPTY_STRING",
                    "description": "the user's last name",
                    "isArray": false,
                    "isOptional": false,
                    "label": "last name",
                  },
                },
              },
            },
          },
          "roles": {
            "complexDataType": "ENUM",
            "description": "the user's roles, which grant privileges to perform certain read \\ write actions",
            "enumLabel": "User Role",
            "enumName": "COSCRAD_USER_ROLE",
            "isArray": true,
            "isOptional": false,
            "label": "roles",
            "labelsAndValues": [
              {
                "label": "admin",
                "value": "projectAdmin",
              },
              {
                "label": "viewer",
                "value": "viewer",
              },
              {
                "label": "COSCRAD admin",
                "value": "superAdmin",
              },
            ],
          },
          "username": {
            "coscradDataType": "NON_EMPTY_STRING",
            "description": "a human-readable identifier for this user",
            "isArray": false,
            "isOptional": false,
            "label": "username",
          },
        },
      },
    },
    "type": "userGroup",
  },
]
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a coscrad admin when querying for user groups when fetching a group by ID when there is a group with the given ID should find the group 1`] = `
{
  "actions": [
    {
      "description": "Add an existing user to an existing user group",
      "form": {
        "fields": [
          {
            "constraints": [
              {
                "message": "must be a UUID",
                "name": "UUID",
              },
              {
                "message": "must be a defined value",
                "name": "defined value",
              },
            ],
            "description": "the ID of the user that will be added to this group",
            "label": "user ID",
            "name": "userId",
            "options": {
              "aggregateType": "user",
            },
            "type": "DYNAMIC_SELECT",
          },
        ],
        "prepopulatedFields": {
          "aggregateCompositeIdentifier": {
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
            "type": "userGroup",
          },
        },
      },
      "label": "Add User to Group",
      "type": "ADD_USER_TO_GROUP",
    },
  ],
  "description": "This group is for members of the community only.",
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "label": "community members",
  "name": {
    "items": [
      {
        "languageCode": "eng",
        "role": "original",
        "text": "community members",
      },
    ],
  },
  "users": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "name": {
        "items": [
          {
            "languageCode": "eng",
            "role": "original",
            "text": "cool-james",
          },
        ],
      },
      "profile": {
        "email": "llcj1985@aol.com",
        "name": {
          "firstName": "James",
          "lastName": "Jones",
        },
      },
      "roles": [
        "projectAdmin",
      ],
      "username": "cool-james",
    },
  ],
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a coscrad admin when querying for user groups when fetching all groups should return the expected result 1`] = `
{
  "entities": [
    {
      "actions": [
        {
          "description": "Add an existing user to an existing user group",
          "form": {
            "fields": [
              {
                "constraints": [
                  {
                    "message": "must be a UUID",
                    "name": "UUID",
                  },
                  {
                    "message": "must be a defined value",
                    "name": "defined value",
                  },
                ],
                "description": "the ID of the user that will be added to this group",
                "label": "user ID",
                "name": "userId",
                "options": {
                  "aggregateType": "user",
                },
                "type": "DYNAMIC_SELECT",
              },
            ],
            "prepopulatedFields": {
              "aggregateCompositeIdentifier": {
                "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
                "type": "userGroup",
              },
            },
          },
          "label": "Add User to Group",
          "type": "ADD_USER_TO_GROUP",
        },
      ],
      "description": "This group is for members of the community only.",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "label": "community members",
      "name": {
        "items": [
          {
            "languageCode": "eng",
            "role": "original",
            "text": "community members",
          },
        ],
      },
      "users": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "name": {
            "items": [
              {
                "languageCode": "eng",
                "role": "original",
                "text": "cool-james",
              },
            ],
          },
          "profile": {
            "email": "llcj1985@aol.com",
            "name": {
              "firstName": "James",
              "lastName": "Jones",
            },
          },
          "roles": [
            "projectAdmin",
          ],
          "username": "cool-james",
        },
      ],
    },
  ],
  "indexScopedActions": [
    {
      "description": "Creates a new user group",
      "form": {
        "fields": [
          {
            "constraints": [
              {
                "message": "must be a non-empty string",
                "name": "non-empty string",
              },
              {
                "message": "must be a defined value",
                "name": "defined value",
              },
            ],
            "description": "the name of the user group",
            "label": "label",
            "name": "label",
            "type": "TEXT_FIELD",
          },
          {
            "constraints": [
              {
                "message": "must be a non-empty string",
                "name": "non-empty string",
              },
              {
                "message": "must be a defined value",
                "name": "defined value",
              },
            ],
            "description": "a summary of the purpose of this group (what its members have in common)",
            "label": "description",
            "name": "description",
            "type": "TEXT_FIELD",
          },
        ],
        "prepopulatedFields": {},
      },
      "label": "Create User Group",
      "type": "CREATE_USER_GROUP",
    },
  ],
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a coscrad admin when querying for users when fetching a user by ID when there is a user with the given ID should find the user 1`] = `
{
  "actions": [
    {
      "description": "Grant an additional user role to the user",
      "form": {
        "fields": [
          {
            "constraints": [
              {
                "message": "Must be a valid \${propertyLabel}",
                "name": "IS_ENUM",
              },
            ],
            "description": "the role that will be granted to this user",
            "label": "User Role",
            "name": "role",
            "options": [
              {
                "display": "admin",
                "value": "projectAdmin",
              },
              {
                "display": "viewer",
                "value": "viewer",
              },
              {
                "display": "COSCRAD admin",
                "value": "superAdmin",
              },
            ],
            "type": "STATIC_SELECT",
          },
        ],
        "prepopulatedFields": {
          "aggregateCompositeIdentifier": {
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
            "type": "user",
          },
        },
      },
      "label": "Grant User Role",
      "type": "GRANT_USER_ROLE",
    },
  ],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "name": {
    "items": [
      {
        "languageCode": "eng",
        "role": "original",
        "text": "cool-james",
      },
    ],
  },
  "profile": {
    "email": "llcj1985@aol.com",
    "name": {
      "firstName": "James",
      "lastName": "Jones",
    },
  },
  "roles": [
    "projectAdmin",
  ],
  "username": "cool-james",
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a coscrad admin when querying for users when fetching all users should return the expected result 1`] = `
{
  "entities": [
    {
      "actions": [
        {
          "description": "Grant an additional user role to the user",
          "form": {
            "fields": [
              {
                "constraints": [
                  {
                    "message": "Must be a valid \${propertyLabel}",
                    "name": "IS_ENUM",
                  },
                ],
                "description": "the role that will be granted to this user",
                "label": "User Role",
                "name": "role",
                "options": [
                  {
                    "display": "admin",
                    "value": "projectAdmin",
                  },
                  {
                    "display": "viewer",
                    "value": "viewer",
                  },
                  {
                    "display": "COSCRAD admin",
                    "value": "superAdmin",
                  },
                ],
                "type": "STATIC_SELECT",
              },
            ],
            "prepopulatedFields": {
              "aggregateCompositeIdentifier": {
                "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
                "type": "user",
              },
            },
          },
          "label": "Grant User Role",
          "type": "GRANT_USER_ROLE",
        },
      ],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "name": {
        "items": [
          {
            "languageCode": "eng",
            "role": "original",
            "text": "cool-james",
          },
        ],
      },
      "profile": {
        "email": "llcj1985@aol.com",
        "name": {
          "firstName": "James",
          "lastName": "Jones",
        },
      },
      "roles": [
        "projectAdmin",
      ],
      "username": "cool-james",
    },
  ],
  "indexScopedActions": [
    {
      "description": "Register a new COSCRAD user after the user has been registered with the auth provider",
      "form": {
        "fields": [
          {
            "constraints": [
              {
                "message": "must be a non-empty string",
                "name": "non-empty string",
              },
              {
                "message": "must be a defined value",
                "name": "defined value",
              },
            ],
            "description": "the auth provider's unique ID for this user (the user must be added to the auth provider first)",
            "label": "auth provider's ID",
            "name": "userIdFromAuthProvider",
            "type": "TEXT_FIELD",
          },
          {
            "constraints": [
              {
                "message": "must be a non-empty string",
                "name": "non-empty string",
              },
              {
                "message": "must be a defined value",
                "name": "defined value",
              },
            ],
            "description": "a human-readable text identifier for this user",
            "label": "username",
            "name": "username",
            "type": "TEXT_FIELD",
          },
        ],
        "prepopulatedFields": {},
      },
      "label": "Register User",
      "type": "REGISTER_USER",
    },
  ],
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a project admin when querying for user groups when fetching a group by ID when there is a group with the given ID should find the group 1`] = `
{
  "actions": [
    {
      "description": "Add an existing user to an existing user group",
      "form": {
        "fields": [
          {
            "constraints": [
              {
                "message": "must be a UUID",
                "name": "UUID",
              },
              {
                "message": "must be a defined value",
                "name": "defined value",
              },
            ],
            "description": "the ID of the user that will be added to this group",
            "label": "user ID",
            "name": "userId",
            "options": {
              "aggregateType": "user",
            },
            "type": "DYNAMIC_SELECT",
          },
        ],
        "prepopulatedFields": {
          "aggregateCompositeIdentifier": {
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
            "type": "userGroup",
          },
        },
      },
      "label": "Add User to Group",
      "type": "ADD_USER_TO_GROUP",
    },
  ],
  "description": "This group is for members of the community only.",
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "label": "community members",
  "name": {
    "items": [
      {
        "languageCode": "eng",
        "role": "original",
        "text": "community members",
      },
    ],
  },
  "users": [
    {
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "name": {
        "items": [
          {
            "languageCode": "eng",
            "role": "original",
            "text": "cool-james",
          },
        ],
      },
      "profile": {
        "email": "llcj1985@aol.com",
        "name": {
          "firstName": "James",
          "lastName": "Jones",
        },
      },
      "roles": [
        "projectAdmin",
      ],
      "username": "cool-james",
    },
  ],
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a project admin when querying for user groups when fetching all groups should return the expected result 1`] = `
{
  "entities": [
    {
      "actions": [
        {
          "description": "Add an existing user to an existing user group",
          "form": {
            "fields": [
              {
                "constraints": [
                  {
                    "message": "must be a UUID",
                    "name": "UUID",
                  },
                  {
                    "message": "must be a defined value",
                    "name": "defined value",
                  },
                ],
                "description": "the ID of the user that will be added to this group",
                "label": "user ID",
                "name": "userId",
                "options": {
                  "aggregateType": "user",
                },
                "type": "DYNAMIC_SELECT",
              },
            ],
            "prepopulatedFields": {
              "aggregateCompositeIdentifier": {
                "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
                "type": "userGroup",
              },
            },
          },
          "label": "Add User to Group",
          "type": "ADD_USER_TO_GROUP",
        },
      ],
      "description": "This group is for members of the community only.",
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "label": "community members",
      "name": {
        "items": [
          {
            "languageCode": "eng",
            "role": "original",
            "text": "community members",
          },
        ],
      },
      "users": [
        {
          "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
          "name": {
            "items": [
              {
                "languageCode": "eng",
                "role": "original",
                "text": "cool-james",
              },
            ],
          },
          "profile": {
            "email": "llcj1985@aol.com",
            "name": {
              "firstName": "James",
              "lastName": "Jones",
            },
          },
          "roles": [
            "projectAdmin",
          ],
          "username": "cool-james",
        },
      ],
    },
  ],
  "indexScopedActions": [
    {
      "description": "Creates a new user group",
      "form": {
        "fields": [
          {
            "constraints": [
              {
                "message": "must be a non-empty string",
                "name": "non-empty string",
              },
              {
                "message": "must be a defined value",
                "name": "defined value",
              },
            ],
            "description": "the name of the user group",
            "label": "label",
            "name": "label",
            "type": "TEXT_FIELD",
          },
          {
            "constraints": [
              {
                "message": "must be a non-empty string",
                "name": "non-empty string",
              },
              {
                "message": "must be a defined value",
                "name": "defined value",
              },
            ],
            "description": "a summary of the purpose of this group (what its members have in common)",
            "label": "description",
            "name": "description",
            "type": "TEXT_FIELD",
          },
        ],
        "prepopulatedFields": {},
      },
      "label": "Create User Group",
      "type": "CREATE_USER_GROUP",
    },
  ],
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a project admin when querying for users when fetching a user by ID when there is a user with the given ID should find the user 1`] = `
{
  "actions": [
    {
      "description": "Grant an additional user role to the user",
      "form": {
        "fields": [
          {
            "constraints": [
              {
                "message": "Must be a valid \${propertyLabel}",
                "name": "IS_ENUM",
              },
            ],
            "description": "the role that will be granted to this user",
            "label": "User Role",
            "name": "role",
            "options": [
              {
                "display": "admin",
                "value": "projectAdmin",
              },
              {
                "display": "viewer",
                "value": "viewer",
              },
              {
                "display": "COSCRAD admin",
                "value": "superAdmin",
              },
            ],
            "type": "STATIC_SELECT",
          },
        ],
        "prepopulatedFields": {
          "aggregateCompositeIdentifier": {
            "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
            "type": "user",
          },
        },
      },
      "label": "Grant User Role",
      "type": "GRANT_USER_ROLE",
    },
  ],
  "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
  "name": {
    "items": [
      {
        "languageCode": "eng",
        "role": "original",
        "text": "cool-james",
      },
    ],
  },
  "profile": {
    "email": "llcj1985@aol.com",
    "name": {
      "firstName": "James",
      "lastName": "Jones",
    },
  },
  "roles": [
    "projectAdmin",
  ],
  "username": "cool-james",
}
`;

exports[`User Management Queries when the system user issuing the command is authorized when the user is a project admin when querying for users when fetching all users should return the expected result 1`] = `
{
  "entities": [
    {
      "actions": [
        {
          "description": "Grant an additional user role to the user",
          "form": {
            "fields": [
              {
                "constraints": [
                  {
                    "message": "Must be a valid \${propertyLabel}",
                    "name": "IS_ENUM",
                  },
                ],
                "description": "the role that will be granted to this user",
                "label": "User Role",
                "name": "role",
                "options": [
                  {
                    "display": "admin",
                    "value": "projectAdmin",
                  },
                  {
                    "display": "viewer",
                    "value": "viewer",
                  },
                  {
                    "display": "COSCRAD admin",
                    "value": "superAdmin",
                  },
                ],
                "type": "STATIC_SELECT",
              },
            ],
            "prepopulatedFields": {
              "aggregateCompositeIdentifier": {
                "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
                "type": "user",
              },
            },
          },
          "label": "Grant User Role",
          "type": "GRANT_USER_ROLE",
        },
      ],
      "id": "9b1deb4d-3b7d-4bad-9bdd-2b0d7b110001",
      "name": {
        "items": [
          {
            "languageCode": "eng",
            "role": "original",
            "text": "cool-james",
          },
        ],
      },
      "profile": {
        "email": "llcj1985@aol.com",
        "name": {
          "firstName": "James",
          "lastName": "Jones",
        },
      },
      "roles": [
        "projectAdmin",
      ],
      "username": "cool-james",
    },
  ],
  "indexScopedActions": [
    {
      "description": "Register a new COSCRAD user after the user has been registered with the auth provider",
      "form": {
        "fields": [
          {
            "constraints": [
              {
                "message": "must be a non-empty string",
                "name": "non-empty string",
              },
              {
                "message": "must be a defined value",
                "name": "defined value",
              },
            ],
            "description": "the auth provider's unique ID for this user (the user must be added to the auth provider first)",
            "label": "auth provider's ID",
            "name": "userIdFromAuthProvider",
            "type": "TEXT_FIELD",
          },
          {
            "constraints": [
              {
                "message": "must be a non-empty string",
                "name": "non-empty string",
              },
              {
                "message": "must be a defined value",
                "name": "defined value",
              },
            ],
            "description": "a human-readable text identifier for this user",
            "label": "username",
            "name": "username",
            "type": "TEXT_FIELD",
          },
        ],
        "prepopulatedFields": {},
      },
      "label": "Register User",
      "type": "REGISTER_USER",
    },
  ],
}
`;
